--- a/publications.bib
+++ b/publications.bib
@@ -1,15 +1,31 @@
-@article{linguistics,
-  author =       "Sam Tilsen and Debarghya Das and Bruce McKee",
-  title =        "Real-time articulatory biofeedback with electromagnetic articulography",
-  journal =      "Linguistics Vanguard",
-  year =         "in press",
-  DOI =          "http://dx.doi.org/10.1002/andp.19053221004"
+@inproceedings{seufert2013gamification,
+  title={Gamification framework for personalized surveys on relationships in online social networks},
+  author={Seufert, Michael and Lorey, Karl and Hirth, Matthias and Hoßfeld, Tobias},
+  booktitle={Proceedings of the 2013 IEEE/ACM 6th International Conference on Utility and Cloud Computing},
+  pages={482--487},
+  year={2013},
+  organization={IEEE Computer Society}
 }
 
-@article{ml,
-  author =       "Ashesh Jain and Debarghya Das and Ashutosh Saxena",
-  title =        "PlanIt: A Crowdsourcing Approach for Learning to Plan Paths from Large Scale Preference Feedback",
-  journal =      "Tech Report, ICRA",
-  year =         "in press",
-  DOI =          "http://arxiv.org/abs/1406.2616"
+@inproceedings{lorey2016teal,
+  author    = {Karl Lorey and
+               Erik Buchmann and
+               Klemens B{\"{o}}hm},
+  title     = {{TEAL:} Transparent Encryption for the Database Abstraction Layer},
+  booktitle = {Proceedings of the CAiSE'16 Forum, at the 28th International Conference
+               on Advanced Information Systems Engineering (CAiSE 2016), Ljubljana,
+               Slovenia, June 13-17, 2016.},
+  pages     = {145--152},
+  year      = {2016},
+  url       = {http://ceur-ws.org/Vol-1612/paper19.pdf}
+}
+
+@article{seufert2016assessment,
+  title={Assessment of subjective influence and trust with an online social network game},
+  author={Seufert, Michael and Burger, Valentin and Lorey, Karl and Seith, Alexander and Loh, Frank and Tran-Gia, Phuoc},
+  journal={Computers in Human Behavior},
+  volume={64},
+  pages={233--246},
+  year={2016},
+  publisher={Elsevier}
 }
